--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     
     "require": {
         "nikic/fast-route": "^1.3",
-        "php-di/php-di": "^7.1"
+        "php-di/php-di": "^7.1",
+        "vlucas/phpdotenv": "^5.6",
+        "robmorgan/phinx": "^0.16.10"
     },
 
     "autoload": {
@@ -11,5 +13,13 @@
             "App\\": "src/app/",
             "Core\\": "src/core/"
         }
+    },
+
+    "scripts": {
+        "phinx": "phinx",
+        "migrate": "phinx migrate",
+        "rollback": "phinx rollback",
+        "create-migration": "phinx create"
     }
+
 }
