--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,13 +14,14 @@ services:
     build: ./php
     volumes:
       - ./:/var/www/html
+      
   db:
     image: mysql:8
     environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: appdb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
     ports:
