--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "illuminate/events": "^12.49",
         "illuminate/container": "^12.49",
         "illuminate/support": "^12.49",
-        "robmorgan/phinx": "^0.16.10"
+        "robmorgan/phinx": "^0.16.10",
+        "symfony/console": "^7.4"
     },
 
     "autoload": {
