--- a/nginx.conf/nginx.conf
+++ b/nginx.conf/nginx.conf
@@ -5,13 +5,27 @@ server {
     root /var/www/html/src/public;
     index index.php index.html;
 
+    location ~* \.(jpg|jpeg|png|gif|css|js|ico|svg|woff|woff2)$ {
+        expires 7d;
+        access_log off;
+        try_files $uri =404;
+    }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
         fastcgi_pass app:9000;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+        include fastcgi.conf;   # 🔥 dùng cái này thay fastcgi_params
+
+        fastcgi_buffering on;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+    }
+
+    location ~ /\. {
+        deny all;
     }
 }
