--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,9 +1,13 @@
 FROM php:8.2-fpm-alpine
 
+WORKDIR /var/www/html
+
+COPY . .
+
 RUN apk add --no-cache curl git unzip
 
 RUN docker-php-ext-install pdo pdo_mysql mysqli
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-WORKDIR /var/www/html
+RUN composer install --optimize-autoloader --no-dev
