--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,17 +4,20 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./:/var/www/html
       - ./nginx.conf/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
-      - db
 
   app:
-    build: ./php
+    build:
+      context: .
+      dockerfile: php/Dockerfile
+    container_name: php_app
     volumes:
-      - ./:/var/www/html
-      
+      - ./:/var/www/html 
+    depends_on:
+      - db
+
   db:
     image: mysql:8
     environment:
