--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -2,12 +2,17 @@ FROM php:8.2-fpm-alpine
 
 WORKDIR /var/www/html
 
-COPY . .
-
-RUN apk add --no-cache curl git unzip
+RUN apk add --no-cache curl git unzip $PHPIZE_DEPS openssl-dev
 
 RUN docker-php-ext-install pdo pdo_mysql mysqli
 
+RUN pecl install mongodb \
+    && docker-php-ext-enable mongodb
+
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
+COPY composer.json composer.lock ./
+
 RUN composer install --optimize-autoloader --no-dev
+
+COPY . .
