--- a/nginx.conf/nginx.conf
+++ b/nginx.conf/nginx.conf
@@ -18,7 +18,7 @@ server {
     location ~ \.php$ {
         fastcgi_pass app:9000;
 
-        include fastcgi.conf;   # 🔥 dùng cái này thay fastcgi_params
+        include fastcgi.conf;
 
         fastcgi_buffering on;
         fastcgi_buffers 16 16k;
